# rsync-rust-ffi

./: Cargo.toml  README.md
src/: file.rs  lib.rs  utilities.rs
src/file/: delta.rs  patch.rs  signature.rs
