[package]
name = "librsync-ffi"
description = "opinionated bindings to librsync"
version = "0.1.0"
authors = ["kevin <me@kvnvelasco.com>"]
edition = "2018"

readme = "README.md"
license = "GPL-2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.68"
tempfile = "3.1.0"